uodated dev filters